testdata/baselines/reference/submodule/conformance/symbolType1.errors.txt
symbolType1.ts(1,1): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== symbolType1.ts (1 errors) ====
    Symbol() instanceof Symbol;
    ~~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    Symbol instanceof Symbol();
    (Symbol() || {}) instanceof Object; // This one should be okay, it's a valid way of distinguishing types
    Symbol instanceof (Symbol() || {});